--- a/trunk/diamandas/pages/templates/pages/body.html
+++ b/trunk/diamandas/pages/templates/pages/body.html
@@ -7,7 +7,9 @@
 <meta name="Robots" content="index,follow" />
 <link rel="stylesheet" href="/site_media/layout/style.css" type="text/css" />
 <link rel="shortcut icon" href="/site_media/layout/favicon.ico" />
-<script src="/site_media/layout/biblioteka.js" type="text/javascript"></script>{% block meta %}{% endblock %}
+<!--<script src="/site_media/layout/jquery.pack.js" type="text/javascript"></script>-->
+<script src="/site_media/layout/biblioteka.js" type="text/javascript"></script>
+{% block meta %}{% endblock %}
 </head>
 <body>
 	<div id="crumb"><b>{% trans "You are here" %}</b>: {% block crumb %}<a href="/">{% trans "Home" %}</a>{% endblock %}</div>
